changed list.of to Arrays.asList